clusters/kind_ovh/infra/prometheus/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-dashboard
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "${hostname}"
    secretName: grafana-dash-tls
  rules:
  - host: "${hostname}"
    http:
      paths:
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: prometheus-stack-grafana
            port:
              number: 3000
---
